tests/errors/duplicate-const.au
const a = 10;
const a = 20;
